# lmpc

./: Makefile.am  Makefile.in  README  README.base  acconfig.h  config.h.in  configure  configure.in  wpurc
doc/: COMPILE  COMPILE-go32  Makefile.am  Makefile.in  lmpc.base
src/: Makefile.am  Makefile.in  binblock.c  binblock.h  dbs.c  demcut.c  lmpc.c  lmpc.h  lzw.c  memcmp.c  memmem.c  node.c  node.h  record.c  record.h  strsep.c  tokenlist.in  tools.c  tools.h  udem.c  udem.h  udeml.l.in  udemy.y.in  udm2-te1.c  udm2-te2.c  udm2-te3.c  udm2.c  udm2.h  udmo.c  udmo.h  ulmp.c  ulmp.h  unlzw.c  uqwd.c  uqwd.h
